fix the footer overlap on home page in a mobile view

--- a/TWLight/static/css/local.css
+++ b/TWLight/static/css/local.css
@@ -774,3 +774,9 @@ CLEARING COLUMNS
   color: #fff;
 }
 
+@media (max-width:300px){
+  #footer{
+    position: relative;
+    top: 7px;
+  }
+}
